baseEntity 추가